# pydantic-cereal

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .readthedocs.yaml  README.md  environment.yml  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci-publish.yml  python-testing.yml
docs/: index.md  minimal_example.ipynb  pandas_example.ipynb  reference.md
docs/examples/: minimal.ipynb  pandas.ipynb  polars.ipynb
secrets/: README.md
src/pydantic_cereal/: __init__.py  _metadata.py  _path_utils.py  _protocols.py  _utils.py  errors.py  main.py  version.py
src/pydantic_cereal/compat/: pydantic_v1.py
src/pydantic_cereal/examples/: __init__.py  ex_pd.py  ex_pl.py
src/tests/: __init__.py  common.py  conftest.py  def_mytype.py  def_pandas.py  def_polars.py  test_import.py  test_pandas.py  test_readme.py  test_roundtrip.py
