# See https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
requires = ["setuptools>=61.0.0", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pydantic-cereal"
description = "Advanced serialization for Pydantic models"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]
keywords = ["pydantic", "serialize", "fsspec", "yaml"]

license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development",
    "Typing :: Typed",
]
dependencies = ["pydantic>=2,<3", "fsspec"]
# Add url = "https://github.com/NowanIlfideme/pydantic-cereal"

[project.optional-dependencies]
dev = [
    "setuptools>=61.0.0",
    "setuptools-scm[toml]>=6.2",
    "pre-commit==3.5.0",
    "black==23.11.0",
    "isort==5.12.0",
    "ruff==0.0.291",
    "mypy==1.5.1",
    "pytest==7.4.2",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "pymdown-extensions",
    "pygments",
]

[project.scripts]

[tool.setuptools]
zip-safe = false
package-dir = { "" = "src" }
packages = ["pydantic_cereal"]

[tool.setuptools.package-data]

[tool.setuptools.dynamic]
version = { attr = "pydantic_cereal.version.__version__" }

[tool.setuptools_scm]

[tool.ruff]
line-length = 105
src = ["src"]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    # "UP", # pyupgrade
    "D", # pydocstyle
]
ignore = ["D203", "D213"] # conflicting

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.black]
line-length = 105
target-version = ['py39']
extend-exclude = [".git"]

[tool.isort]
profile = "black"
skip = [".git"]

[tool.pytest.ini_options]
# Docs: https://docs.pytest.org/en/7.1.x/reference/customize.html#pyproject-toml
minversion = "6.0"
testpaths = ["src/tests"]


[tool.mypy]
# Docs: https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
python_version = "3.9"
warn_unused_configs = true
warn_return_any = false
files = ["src/pydantic_cereal"]
exclude = "src/tests"

[[tool.mypy.overrides]]
module = ["pydantic_cereal.*"]
disallow_untyped_defs = true
namespace_packages = false

[[tool.mypy.overrides]]
module = ["setuptools", "setuptools_scm"]
ignore_missing_imports = true
