# See https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
requires = ["setuptools>=61.0.0", "setuptools-scm[toml]>=6.2", "wheel>=0.41"]
build-backend = "setuptools.build_meta"

[project]
name = "pydantic-cereal"
description = "Advanced serialization for Pydantic models"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]
keywords = ["pydantic", "serialize", "fsspec", "yaml"]

license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development",
    "Typing :: Typed",
]
dependencies = ["pydantic>=2,<3", "fsspec", "universal_pathlib"]
# Add url = "https://github.com/NowanIlfideme/pydantic-cereal"

[project.optional-dependencies]
dev = [
    # Dependencies and build
    "setuptools>=61.0.0",
    "setuptools-scm[toml]>=6.2",
    "wheel>=0.41",
    # Dev tools
    "pre-commit==3.6.0",
    # Linting
    "ruff==0.2.1",
    "black==23.12.1",
    "isort==5.13.2",
    "mypy==1.8.0",
    # Testing
    "pytest==7.4.4",
    "pytest-lazy-fixture==0.6.3",
    "pytest-cases==3.8.2",
    # Jupyter Notebook
    "jupyter",
    "ipykernel",
    # Stubs (including optional dependencies)
    "pandas-stubs",
    "polars",
    # Additional dependencies for testing
    "gcsfs~=2023.12.2",
]
docs = [
    "mkdocs==1.5.3",
    "mkdocs-material==9.5.9",
    "mkdocstrings==0.24.0",
    "mkdocstrings-python==1.8.0",
    "mkdocs-jupyter==0.24.6",
    "pygments==2.17.2",
]
datatests = ["pandas~=2.1.3", "pyarrow~=14.0.1", "pyspark~=3.5.0", "polars~=0.20.7"]

[project.scripts]

[tool.setuptools]
zip-safe = false
package-dir = { "" = "src" }
packages = ["pydantic_cereal"]

[tool.setuptools.package-data]

[tool.setuptools.dynamic]
version = { attr = "pydantic_cereal.version.__version__" }

[tool.setuptools_scm]

[tool.ruff]
line-length = 105
src = ["src"]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    # "UP", # pyupgrade
    "D", # pydocstyle
]
ignore = ["D203", "D213"] # conflicting

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.black]
line-length = 105
target-version = ['py39']
extend-exclude = ".git"

[tool.isort]
profile = "black"
skip = [".git"]

[tool.pytest.ini_options]
# Docs: https://docs.pytest.org/en/7.1.x/reference/customize.html#pyproject-toml
minversion = "6.0"
testpaths = ["src/tests"]


[tool.mypy]
# Docs: https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
python_version = "3.9"
warn_unused_configs = true
warn_return_any = false
namespace_packages = false
files = ["src/pydantic_cereal"]
exclude = "src/tests"

[[tool.mypy.overrides]]
module = ["pydantic_cereal.*"]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["setuptools", "setuptools_scm", "fsspec"]
ignore_missing_imports = true
